tenants/tenant-string/string/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: string
    tenant: tenant-string
  name: string
  namespace: tenant-string
spec:
  replicas: 2
  selector:
    matchLabels:
      app: string
      tenant: tenant-string
  template:
    metadata:
      labels:
        app: string
        tenant: tenant-string
    spec:
      containers:
      - image: nginx:1.27-alpine
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        name: string
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
