tenants/tenant-string/string/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: string
    tenant: tenant-string
  name: string-service
  namespace: tenant-string
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: string
    tenant: tenant-string
  type: ClusterIP
